--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "team-pulse-dashboard",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "A production-ready React dashboard with role-based views for team productivity management",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"No tests configured yet\" && exit 0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -53,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-is": "^18.3.1",
+    "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.2.1",
